--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "relative-time": "^1.0.0",
         "sass": "^1.69.5",
         "simplebar-vue": "^2.4.0",
+        "sweetalert2": "^11.26.3",
         "swiper": "^11.2.2",
         "v-money": "^0.8.1",
         "vue-datepicker-next": "^1.0.3",
