--- a/.env
+++ b/.env
@@ -21,10 +21,10 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_PORT=3307
 DB_DATABASE=brtsoftware_db
-DB_USERNAME=root
-DB_PASSWORD=dost
+DB_USERNAME=sa
+DB_PASSWORD=code
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
