--- a/.env
+++ b/.env
@@ -24,7 +24,8 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=brtsoftware_db
 DB_USERNAME=root
-DB_PASSWORD=dost
+DB_PASSWORD=code
+
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
