--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "vue-draggable-next": "^2.2.1",
         "vue-filepond": "^7.0.4",
         "vue-flatpickr-component": "^11.0.3",
+        "vue-toastification": "^2.0.0-rc.5",
         "vue3-apexcharts": "^1.8.0",
         "vuex": "^4.1.0"
     }
